@@ -1,3 +1,10 @@
+2007-03-27  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/interface.cpp:
+
+	Little cleanup. Removed dozens of unnecessary gtk_widget_show.
+
 2007-03-12  Benoît Dejean  <benoit@placenet.org>
 
 	* NEWS:
